--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
-device "name": "SESOM TECH",
+"name": "SESOM TECH",
   "description": "SESOM TECH made help to help Whatsapp users to enjoy while helping...",
   "keywords": [
     "bot" "baileys",
@@ -178,5 +178,6 @@ device "name": "SESOM TECH",
   ]
 
 }
+
 
 
